修改配置文件位置

--- a/basis/src/main/resources/application.properties
+++ b/basis/src/main/resources/application.properties
@@ -1,2 +1,12 @@
+#服务端口
 server.port=8080
 server.servlet.context-path=/basis
+
+#服务名称
+spring.application.name=basis
+
+#日志级别从小到大TRACE < DEBUG < INFO < WARN < ERROR < FATAL
+logging.level.root=info
+logging.level.org.mybatis=error
+logging.level.com.fengfan=debug
+logging.file.name=basis.log
