--- a/pom.xml
+++ b/pom.xml
@@ -18,25 +18,20 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mybatis.version>3.5.3</mybatis.version>
-        <mybatis-spring.version>2.0.3</mybatis-spring.version>
+        <mybatis-spring-boot-starter.verson>2.2.2</mybatis-spring-boot-starter.verson>
     </properties>
 
     <modules>
         <module>basis</module>
+        <module>web</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>${mybatis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>${mybatis-spring.version}</version>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.verson}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
