--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis-spring-boot-starter.verson>2.2.2</mybatis-spring-boot-starter.verson>
+        <fastjson.verson>1.2.70</fastjson.verson>
     </properties>
 
     <modules>
@@ -32,6 +33,11 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot-starter.verson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.verson}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
