--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mvc:
+    static-path-pattern: /static/**
 
 #配置mybatis mapper路径和实体别名
 mybatis:
