Servlet、Filter、Listener配置

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>basis</module>
         <module>web</module>
+        <module>rest</module>
     </modules>
 
     <dependencyManagement>
