--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
       ddl-auto: none
     database: mysql
     show-sql: true
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
